force-app/main/default/objects/cgcloud__Order_Payment__c/cgcloud__Order_Payment__c.object-meta.xml
<CustomObject>
    <description>Holds the attributes of order payment object.</description>
    <label>Order Payment</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Order Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>