force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Absolute_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Absolute_Amount__c</fullName>
    <description>Amount of the payment without sign.</description>
    <label>Absolute Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>