force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Amount_DC__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount_DC__c</fullName>
    <description>Amount in domestic currency. Payments are gross values.</description>
    <label>Amount DC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>