force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Amount_RC__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount_RC__c</fullName>
    <description>Amount in receipt currency.</description>
    <label>Amount RC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>