force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bank_Account_Number__c</fullName>
    <description>Account number at the bank.</description>
    <label>Bank Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>