force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Calc_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calc_Amount__c</fullName>
    <description>Calculated value of the payment; used in cash check in process.</description>
    <label>Calc. Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>