force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__CSC__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__CSC__c</fullName>
    <description>Card Security Code of a credit card.</description>
    <label>CSC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>