force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Date_Eff__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Eff__c</fullName>
    <description>Effective date of the means of payment.</description>
    <label>Date Eff.</label>
    <type>Date</type>
</CustomField>