force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Exp__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Exp__c</fullName>
    <description>Expiration date of the means of payment.</description>
    <label>Exp.</label>
    <type>Date</type>
</CustomField>