force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Expense_Type__c</fullName>
    <description>Denotes if other type of expenses are associated such as Road Toll, Gas, etc.</description>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RoadToll</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Lubricant</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>