force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Holder__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Holder__c</fullName>
    <description>Holder of the account.</description>
    <label>Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>