force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initiation_Date__c</fullName>
    <description>Date when the payment has been created within the system.</description>
    <label>Initiation Date</label>
    <type>Date</type>
</CustomField>