force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Institute__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Institute__c</fullName>
    <description>Name of the institute.</description>
    <label>Institute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>