force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number__c</fullName>
    <description>Number of means of payment.</description>
    <label>Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>