force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to order.</description>
    <label>Order</label>
    <referenceTo>cgcloud__Order__c</referenceTo>
    <relationshipLabel>Order Payments</relationshipLabel>
    <relationshipName>Order_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>