force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Payment_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to payment template.</description>
    <label>Payment Template</label>
    <referenceTo>cgcloud__Order_Payment_Template__c</referenceTo>
    <relationshipLabel>Order Payments</relationshipLabel>
    <relationshipName>Order_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>