force-app/main/default/objects/cgcloud__Order_Payment__c/fields/cgcloud__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Type__c</fullName>
    <description>The payment method will be specified in payment template</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>